samples/_failures_safe/1761333743_2ab172_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2d46d2f5.c: In function ‘main’:
./samples/SAFE/__tmp_2d46d2f5.c:153:5: error: expected declaration or statement at end of input
  153 |     int startNode;
      |     ^~~
